--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,41 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["eslint:recommended", "next", "next/core-web-vitals", "plugin:@typescript-eslint/recommended", "prettier"],
+  "plugins": ["@typescript-eslint", "simple-import-sort"],
+  "rules": {
+    "no-unused-vars": "off",
+    "no-console": "warn",
+    "@next/next/no-img-element": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    // Sort
+    "simple-import-sort/exports": "warn",
+    "simple-import-sort/imports": [
+      "warn",
+      {
+        "groups": [
+          // ext library & side effect imports
+          ["^@?\\w", "^\\u0000"],
+          // {s}css files
+          ["^.+\\.s?css$"],
+          // Lib and hooks
+          ["^@/lib", "^@/hooks"],
+          // static data
+          ["^@/data"],
+          // components
+          ["^@/components"],
+          // Other imports
+          ["^@/"],
+          // relative paths up until 3 level
+          ["^\\./?$", "^\\.(?!/?$)", "^\\.\\./?$", "^\\.\\.(?!/?$)", "^\\.\\./\\.\\./?$", "^\\.\\./\\.\\.(?!/?$)", "^\\.\\./\\.\\./\\.\\./?$", "^\\.\\./\\.\\./\\.\\.(?!/?$)"],
+          ["^@/types"],
+          // other that didnt fit in
+          ["^"]
+        ]
+      }
+    ]
+  },
+  "globals": {
+    "React": true,
+    "JSX": true
+  }
 }
