--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier -w src",
+    "format:check": "prettier -c src"
   },
   "dependencies": {
     "@ajna/pagination": "^1.4.19",
@@ -25,6 +27,7 @@
     "framer-motion": "^7.6.6",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -33,6 +36,7 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^4.21.0",
     "@types/cookie": "^0.5.1",
     "@types/js-cookie": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
@@ -41,6 +45,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "postcss": "^8.4.19",
+    "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4"
   }
 }
