--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^8.28.0",
     "eslint-config-next": "^13.0.5",
     "framer-motion": "^7.6.6",
+    "generate-password": "^1.7.0",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
