--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "axios": "^1.2.0",
+    "chakra-react-select": "^4.4.3",
     "eslint": "^8.28.0",
     "eslint-config-next": "^13.0.5",
     "form-data": "^4.0.0",
