--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,20 +15,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Get changed typescript files
-        id: changed-typescript-files
-        uses: tj-actions/changed-files@v20
-        with:
-          base_sha: ${{ github.event.pull_request.base.sha }}
-          files: |
-            **/*.ts
-            **/*.tsx
-
-      - name: TypeScript report
-        if: steps.changed-typescript-files.outputs.any_changed == 'true'
-        uses: fersilva16/ts-report-action@1.1.0
-        with:
-          files: ${{ steps.changed-typescript-files.outputs.all_changed_files }}
+      - name: Lint
+        run: yarn lint
 # name: Check code
 
 # on: [push]
