--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Lint
-        run: yarn lint
+        run: npx next lint
 # name: Check code
 
 # on: [push]
