--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,13 +10,24 @@ jobs:
       matrix:
         node-version: [16.x]
     steps:
-      - uses: actions/checkout@v1
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
-      - name: Lint
-        run: npx next lint
+          node-version: 16.x
+          cache: yarn
+
+      - name: Find yarn cache
+        id: yarn-cache-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - name: Install dependencies
+        run: yarn install --immutable
+
+      - name: Run Linter
+        run: yarn lint
 # name: Check code
 
 # on: [push]
