--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,9 @@ jobs:
 
       - name: Run Linter
         run: yarn lint
+
+      - name: Typecheck
+        uses: andoshin11/typescript-error-reporter-action@v1.0.2
 # name: Check code
 
 # on: [push]
