--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,11 @@ jobs:
       - name: Run Linter
         run: yarn lint
 
-      - name: Typecheck
-        uses: andoshin11/typescript-error-reporter-action@v1.0.2
+      # - name: Typecheck
+      #   uses: andoshin11/typescript-error-reporter-action@v1.0.2
+
+      - name: tsc
+        uses: icrawl/action-tsc@v1
 # name: Check code
 
 # on: [push]
