--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -11,10 +11,12 @@ jobs:
         node-version: [16.x]
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.head_ref }}
 
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: 16.x
           cache: yarn
@@ -26,8 +28,8 @@ jobs:
       - name: Install dependencies
         run: yarn install --immutable
 
-      - name: Run linter
-        uses: actionsx/prettier@v2
+      - name: Prettify code
+        uses: creyD/prettier_action@v4.2
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
