--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -30,6 +30,8 @@ jobs:
 
       - name: Prettify code
         uses: creyD/prettier_action@v4.2
+        with:
+          prettier_options: --write src
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
