--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@heroicons/react": "^2.0.13",
+    "@next/font": "13.0.3",
     "@tanstack/react-query": "^4.18.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
